// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event.review it fetches an event review: event1 1`] = `
Object {
  "node": Object {
    "review": null,
    "title": "Event with registrations",
    "url": "https://capco.test/events/event-with-registrations",
  },
}
`;

exports[`Event.review it fetches an event review: eventCreateByAUserReviewApproved 1`] = `
Object {
  "node": Object {
    "review": Object {
      "comment": null,
      "refusedReason": "NONE",
      "reviewer": Object {
        "_id": "userAdmin",
      },
      "status": "APPROVED",
    },
    "title": "event Create By user with review approved",
    "url": "https://capco.test/events/event-create-by-user-with-review-approved",
  },
}
`;

exports[`Event.review it fetches an event review: eventCreateByAUserReviewAwaiting 1`] = `
Object {
  "node": Object {
    "review": Object {
      "comment": null,
      "refusedReason": "NONE",
      "reviewer": null,
      "status": "AWAITING",
    },
    "title": "event Create By user with review in awaiting",
    "url": "https://capco.test/events/event-create-by-user-with-review-in-awaiting",
  },
}
`;

exports[`Event.review it fetches an event review: eventCreateByAUserReviewRefused 1`] = `
Object {
  "node": Object {
    "review": Object {
      "comment": "This is a spam",
      "refusedReason": "SPAM",
      "reviewer": Object {
        "_id": "userMaxime",
      },
      "status": "REFUSED",
    },
    "title": "event Create By user with review refused",
    "url": "https://capco.test/events/event-create-by-user-with-review-refused",
  },
}
`;

exports[`Event.review it fetches an event review: eventCreateByAUserReviewRefusedEn 1`] = `
Object {
  "node": Object {
    "review": Object {
      "comment": "This is a spam",
      "refusedReason": "SPAM",
      "reviewer": Object {
        "_id": "userMaxime",
      },
      "status": "REFUSED",
    },
    "title": "evenement créer par un utilisateur anglais avec review refused",
    "url": "https://capco.test/events/evenement-creer-par-un-utilisateur-anglais-avec-review-refused",
  },
}
`;
